--- a/Pipfile
+++ b/Pipfile
@@ -5,15 +5,13 @@ name = "pypi"
 
 [packages]
 flask = "*"
-pytelegrambotapi = "*"
 flask = "*"
-yfinance = "*"
-matplotlib = "*"
-datetime = "*"
-fbprophet = "==0.6"
-streamlit = "*"
+fbprophet= "*"
+matplotlib= "*"
+pandas= "*"
 
 [dev-packages]
+pytest = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.11"
